feat: 處理Swagger 問題 給Auth 相關與分類相關加入Swagger
